<resources>
    <string name="app_name">Property Masters</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_email">Enter Email</string>
    <string name="login_password">Enter Password</string>
    <string name="login_button">login</string>
    <string name="register_button">register</string>
    <string name="password_request">Forgot Password?</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone (+256 XX XXX XXXX)</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="button_or">or</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="property_header">Property</string>
    <string name="add_property">Add Property</string>
    <string name="view_property">View Property</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="favourites">Favourite</string>
    <string name="offers_made">Offers Made</string>

    <string name="item_name">Item Name</string>
    <string name="item_category">Item Category</string>
    <string-array name="item_type">
        <item>Apartments</item>
        <item>House</item>
        <item>Land</item>
    </string-array>
    <string name="item_price">Item Price(USD)</string>
    <string name="item_description">Item Description</string>
    <string name="item_image">Choose Item Image</string>
    <string name="location">Provide Property Location </string>
    <string name="location_GPS">Use GPS Location</string>
    <string name="location_gps_button">Get Location</string>
    <string name="location_input">Provide Location Address</string>
    <string name="location_country">Country</string>
    <string name="location_city">City</string>
    <string name="location_address_one">Address 1</string>
    <string name="location_address_two">Address 2</string>
    <string name="get_coordinates">Get Location Coordinates</string>
    <string name="location_coordinates">Lat:123 Log:234</string>
    <string name="add_item">Add Item</string>

</resources>
